Aye something missing long time ago
Imma fixing important thing on this page

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                         </p>
                         <a href="https://api.whatsapp.com/send?phone=6285718823638&text=Hi%20Rifki"
                             class="btn btn-primary mr-4">Contact Me</a>
+                        <a href="assets/img/resume-card-rifkiardiansyah.png" download
+                            class="btn btn-primary-outline mr-4">Download Resume</a>
                     </div>
                 </div>
             </div>
