--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                                 class="px-4 text-black text-decoration-none"><i class="fa fa-github"></i></a>
                         </p>
                         <a href="https://api.whatsapp.com/send?phone=6285718823638&text=Hi%20Rifki"
-                            class="btn btn-primary mr-4">Contact Me</a>
-                        <a href="assets/img/resume-card-rifkiardiansyah.png" download
-                            class="btn btn-primary-outline mr-4">Download Resume</a>
+                            class="btn btn-primary mr-2 mb-2">Contact Me</a>
+                        <a href="assets/img/resume-card-rifkiardiansyah.png" class="btn btn-outline-primary mb-2"
+                            download>Download Resume</a>
                     </div>
                 </div>
             </div>
