--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <p class="fs-16">4 VHS, Bekasi, Indonesia</p>
                                 <p class="fs-16">I met a teacher who recognize me with programming
                                     world and i started learning about web development by my self. I have done an
-                                    intership at amazing company.</p>
+                                    internship at amazing company.</p>
                             </div>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
                             </div>
                             <div class="education-card">
                                 <p class="fs-14 m-0 text-primary">August 2019 - November 2019</p>
-                                <p class="fs-18 font-weight-bold m-0 text-uppercase">Intership</p>
+                                <p class="fs-18 font-weight-bold m-0 text-uppercase">Internship</p>
                                 <p class="fs-16">Bumidayaplaza LTd., Jakarta, Indonesia</p>
                                 <p class="fs-16">Working as backend developer.</p>
                             </div>
